2012-05-15  Werner Lemberg  <wl@gnu.org>

	* doc/txi-hu.tex: Hungarian translation for texinfo.tex.
	Taken from LilyPond documentation.

2012-04-24  Karl Berry  <karl@gnu.org>

	* doc/Makefile.am (TXI_XLATE): add txi-nn.tex.

	* doc/refcard/txirefcard.tex: node pointers are optional.

	* doc/texinfo.txi (Node Line Requirements): don't use the non-word
	"nodename".  Internal whitespace is collapsed.
	
	* doc/texinfo.txi (#line and TeX, Use TeX, Obtaining TeX,
	Preparing for TeX, Debugging with TeX): use @TeX{} in node names
	and thus simplify cross references.  Does not change Info node names,
	hence no need to leave @anchors behind.
	
	* doc/texinfo.txi: update master menu.

2012-04-23  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Output Formats): add PostScript item.
	(Invoking texi2any): add options passed to texi2dvi.
	(texi2any Printed Output): new node.
	(Format with texi2dvi): mention --ps and --dvipdf.

2012-04-22  Karl Berry  <karl@gnu.org>

	* README-hacking: rename from README.dev, for more consistency.

2012-04-21  Patrice Dumas  <pertusus@free.fr>

	* doc/texinfo.txi (Other Configuration Variables): add
	BASEFILENAME_LENGTH.
	(HTML Xref Link Basics): explain that file names 
	are truncated.
	* tp/Texinfo/Common.pm, tp/Texinfo/Convert/Converter.pm,
	tp/Texinfo/Convert/HTML.pm (_id_to_filename): add
	IBASEFILENAME_LENGTH and use it to truncate base
	filenames.
	* tp/Texinfo/Parser.pm tp/t/*: @verb is not accepted in 
	simple text commands and sectioning commands.

2012-04-20  Julian Gilbey  <julian@d-and-j.net>  (tiny change)

	* info/footnotes.c,
	* info/infodoc.c,
	* info/infomap.c,
	* info/session.c: use "%s" as first arg to info_error,
	even with constant strings, to pacify -Wformat-security.
	http://bugs.debian.org/656659.

2012-04-20  Karl Berry  <karl@gnu.org>

	* util/texi2dvi: more doc on --dvipdf, spelling.
	* tp/texi2any.pl: new option --dvipdf.

	* doc/texinfo.txi (Invoking texi2any) <--macro-expand>: